Removed the inline type assertion as Record<string, string> from the reduce function

--- a/src/pages/test-api.astro
+++ b/src/pages/test-api.astro
@@ -22,8 +22,10 @@ const apiEndpoints = {
   ...collections.reduce((acc, collection) => {
     acc[collection] = `/api/${collection}`;
     return acc;
-  }, {} as Record<string, string>)
+  }, {})
 };
+
+type ApiEndpoints = Record<string, string>;
 ---
 
 <Layout title="API Test">
